2015-04-15 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (login:)
	Protect login with lock and busy count

2015-04-15 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Catch exceptions in all locked methods and unlock and decrease busy count.

2015-04-14 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Service convenience method, session details accessors.

	* DBSoapCSV.m (query:)
	Instantiate a private GWSService

2015-04-14 Riccardo Mottola <rm@gnu.org>

	* DBProgressProtocol.h
	Methods for telling the associate process to stop.

	* DBSoapCSV.m (query:)
	Interrupt if the progress monitor says so.

2015-04-14 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Provide isBusy to determine if any of the queries are running, protect all public APIs with a lock and call the equivalent internal unprotected ones.

2015-01-21 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (identifyObjectById) Use keyPrefix accessor, do not
	compare against nil objects.

2015-01-20 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (queryIdentify)
	Throw exception instead of just logging if batch size is specified win an incompatible query.

2014-10-10 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Add class methods for returning login  URLs.

2014-10-10 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Add sending query size in query/queryMore

2014-09-09 Riccardo Mottola <rm@gnu.org>

	* DBCSVReader.h
	* DBCSVReader.m
	Fix header parsing further, remove redundant method.

2014-09-08 Riccardo Mottola <rm@gnu.org>

	* DBCSVReader.h
	* DBCSVReader.m
	Refactor so that header parsing is possible after changing qualifier and separator strings.

2014-08-29 Riccardo Mottola <rm@gnu.org>

	* DBCSVReader.h
	* DBCSVReader.m
	* DBCSVWriter.h
	* DBCSVWriter.m
	Add setters for Qualifiers and Separators.

2014-06-27 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (create, update)
	Catch time out  GWSCoderError and throw an exception.

2014-06-26 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m