@@ -1,5 +1,10 @@
 2015-04-15 Riccardo Mottola <rm@gnu.org>
 
+	* DBSoapCSV.m
+	Instantiate a private service class for create, query, indentify, etc. allowing parallel use.
+
+2015-04-15 Riccardo Mottola <rm@gnu.org>
+
 	* DBSoap.m (login:)
 	Protect login with lock and busy count
 
